[package]
authors = ["Kartik Singhal <kartiksinghal@gmail.com>"]
name = "btclient"
version = "0.1.0"

[dependencies]
bip_metainfo = "0.4.0"
bit-vec = "0.4.3"
chrono = "0.2.25"
clap = "2.19.2"
log = "0.3.6"
url = "1.2.3"

[dependencies.pretty_env_logger]
git = "https://github.com/seanmonstar/pretty-env-logger"
optional = false

[dependencies.rustyline]
git = "https://github.com/kkawakam/rustyline"
optional = false
