[package]
authors = ["Kartik Singhal <kartiksinghal@gmail.com>", "Sumukha TV <tvsumukha@gmail.com>"]
build = "build.rs"
name = "btclient"
version = "0.1.0"

[build-dependencies]
pnet_macros = "*"
syntex = "0.42.*"

[dependencies]
bip_bencode = "0.1.3"
bip_metainfo = "0.4.0"
bip_utracker = "0.3.1"
bit-vec = "0.4.3"
byteorder = "0.5.3"
chrono = "0.2.25"
clap = "2.19.2"
hyper = "0.14.10"
log = "0.3.6"
mio = "0.6.1"
pnet = "*"
pnet_macros_support = "*"
slab = "0.3.0"
url = "1.2.3"

[dependencies.pretty_env_logger]
git = "https://github.com/seanmonstar/pretty-env-logger"
optional = false

[dependencies.rustyline]
git = "https://github.com/kkawakam/rustyline"
optional = false
